2011-02-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAutoreleasePool.m:
	Implement dummy version for use with garbage collecting runtime.

2011-02-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimeZone.m:
	* Source/NSPortCoder.m:
	* Source/NSBundle.m:
	* Source/NSPropertyList.m:
	* Source/NSDistributedNotificationCenter.m:
	* Source/NSProcessInfo.m:
	* Source/NSRunLoop.m:
	* Source/NSOperation.m:
	* Source/NSUserDefaults.m:
	* Source/GSArray.m:
	* Source/NSMessagePortNameServer.m:
	* Source/NSKeyedArchiver.m:
	* Source/NSDebug.m:
	* Source/NSPort.m:
	* Source/NSMessagePort.m:
	* Source/win32/NSMessagePortNameServer.m:
	* Source/NSFileManager.m:
	* Source/NSException.m:
	* Source/NSString.m:
	* Source/Additions/NSData+GNUstepBase.m:
	* Source/Additions/GSMime.m:
	* Source/Additions/NSCalendarDate+GNUstepBase.m:
	* Source/Additions/GSXML.m:
	* Source/Additions/GSObjCRuntime.m:
	* Source/GSSet.m:
	* Source/NSConnection.m:
	* Source/NSThread.m:
	* Source/GSeq.h:
	* Source/NSLog.m:
	* Source/NSTask.m:
	Tweaks to avoid compiler warnings in garbage collecting environment.

2011-02-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Tests/GNUmakefile: Use gnustep-make to supply targets.

2011-02-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFFCallInvocation.m:
	* Source/ObjectiveC2/runtime.c:
	* Source/ObjectiveC2/runtime.h:
	* Source/Additions/GSObjCRuntime.m:
	Avoid messy runtime differences by using old runtime api for typed
	selector features not in the Apple runtime.

2011-02-27  Banlu Kemiyatorn <object@gmail.com>

	* Source/NSOperation.m: Fix error checking condition for dependencies.

2011-02-27  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Look for gc.h in gc subdirectory
	* configure: regenerate
	* Headers/Additions/GNUstepBase/config.h.in: regenerate
	* Source/GNUmakefile: Don't attempt to build GSBlocks.m until it works
	without causing link failures.
	* Source/NSPortCoder.m:
	* Source/NSKeyedArchiver.m: